--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@iconscout/react-unicons": "^1.1.6",
     "@mui/material": "^5.6.0",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "apexcharts": "^3.35.0",
     "framer-motion": "^6.2.9",
@@ -16,6 +15,7 @@
     "react-apexcharts": "^1.4.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.0"
   },
@@ -42,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^14.0.0"
   }
 }
