--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/user-event": "^13.2.1",
     "apexcharts": "^3.35.0",
+    "firebase": "^10.0.0",
     "framer-motion": "^6.2.9",
     "react": "^18.0.0",
     "react-apexcharts": "^1.4.0",
